tests/rosetta/out/Haskell/bitmap-read-a-ppm-file.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bitmap-read-a-ppm-file.hs:121:5: error:
    parse error on input ‘R’
    |
121 |     R :: Int,
    |     ^
